create github pages

--- a/page15.html
+++ b/page15.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section class="mbr-section content5 cid-r6QgbRhhrm" id="content5-4t">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6QgbRhhrm" id="content5-4t">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="F1DVGBclaP1Hx8N7JLBuwv7zcQqNygvKMkEKLKsDRf5h6rCfno4tk5U94oKSFYgrmIf7f8yXrLGDuH9YxGSNXkwqZbbm00su7rrCSwsUvE3n33sVBO64gzMvUWo6LGsZ">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="C7Je4FQxk0LYOAbG9fNJ8Zu55bm5RbTi9TyRzEnYqH14VdWjoAYXr7ZyJWzxB64N1zkAGh72ro+uP1pfJfGXQP+aatmlFF8RzZW6P8IqSdFibUMCPATQIW4jGIcdvaUe">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
