--- a/page6.html
+++ b/page6.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section content5 cid-r6QfMYdPT0" id="content5-4g">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="mbr-section content5 cid-r6QfMYdPT0" id="content5-4g">
 
     
 
@@ -169,8 +169,8 @@
                             
                         </div>
                     </div>
-                <div class="mbr-figure" style="width: 102%;">
-                     <img src="assets/images/mbr-1228x819.jpg" alt="Mobirise" title="">
+                <div class="mbr-figure" style="width: 108%;">
+                     <img src="assets/images/people-woman-coffee-meeting-1124x749.jpg" alt="Mobirise" title="">
                 </div>
             </div>
         </div>
