create github pages

--- a/page12.html
+++ b/page12.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="q+JTbIpT9R6BN0a1SPG8cRFv9RVwCdig/Ozja2aRBEn9h+bx55HmHK8344ZDRaV/Off6Xxi+yHtFQp8zYjKWeatTpdzKoe0KKv4h0+jk5PN4UlpLNYywSXW7uLUvEoki">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="j1iO9OW3MK5vF4N9/iJLjPfL0sjCk47s2vuf7VsZ7TXQq1iz2uZrsfuavFF63vS8BrFANAplsEQQPIG9LT0rn2yvD1kgeurTQlQSw7o2y828UDPRD2qpY+orW6qMbcjx">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
