--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="A6lb57U4AJM/wiI7NrVFQ3Andibh4HOry6OHwJozbM7MObCpt/Ge+71s2vvMerwyFMC8rcX6dnOv64TQaijwBWfW5KFdMl102htuziFW9CFJvjLHsu+goApMG8AqBHhb">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RVxD6nR8ALfSSP0vESbuOwBtQGt/wriNnGMhqES2m+2BiOylVoJ63IMefyoCrDBycTPPqE9/+TP9vpASQSBrRZH6KHdrPeXk4socw4x3OYgm4ZBLZ86KeDLUDOwflwAL">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
