--- a/page12.html
+++ b/page12.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="m1cA3j64pJUJxqRTOedKKfprxi19C5/z2Q58j4Es+f5nb7G7Z09FMzoh02u90Yq3O4//QMYh8lTAqtDSJau9A1rgObH1hewXf3GtNDPqHExWNmwZRwvd0KI7CwGIfcLH">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bzR9SWmBAlOwAynBofIQf1bmniNDJSiyr9DYSmZR5eg0N2XO/TwK3J/6GlhGgigDyUr4dAmhPo5z21OgboSMcFDDfKoVEggJ4qMzW/FzcDVuzGWvep6LfhJLVeOT/KY4">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
