--- a/page14.html
+++ b/page14.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
 
     
 
@@ -110,7 +110,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/-dsc01561-436x291.png" alt="Mobirise" title="">  
+                      <img src="assets/images/-dsc015611-436x291.png" alt="Mobirise" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZfEzID3O+6qKEOoyNQG4Wc3VjZhxtfcpYY65SsxYnJCE04pIhKiVPkcqLyzfBAdfnV9ciJJQCRcZE75t64t27RLLhqeDFrtuDV843kw3FtjxS3wQduS3fvRHqX1OAVIX">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Yn27I9Lpklt/sBQfqLG0iBhU1NRx2iFAvvf7p4wQnJHrjx18Hal65c2lQFJKrHCZX0nbHY1LxbfeHtOw0JSvqZxwopMYTIAd/JNOz2bI1+ocXjKtj91kaCorTnyyxxUl">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
