--- a/page8.html
+++ b/page8.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -518,7 +518,7 @@ Specializing in Home &amp; Auto Insurance</h3>
                 </div>
             </div>
             <div class="mbr-figure" style="width: 56%;">
-                    <img src="assets/images/-dsc01561-700x467.png" alt="Mobirise" title="">
+                    <img src="assets/images/-dsc015611-700x467.png" alt="Mobirise" title="">
             </div>
         </div>
     </div>
