create github pages

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
 
     
 
@@ -341,7 +341,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form! One of our insurance experts will contact you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="c0QNJFjw9KcL6OXye7jEZWNbltGC9Od8hOSNHp9IswVoNMYcpAZrCGr86oKEupOiOuAaOE2jxzqz1C2pfSY/fzCfj3u54Z3tHqp5TOt4ib4+6LQkAuGF17UyJlTIaerD">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rJSo2uROeBi0tvOaCLPWdDQZbgURnuGuOoaFH8JD4geZcvixqGMBzct5nce4EX/OdIsqnCqlEvch4otKcHqn6hKNuIELKrPAb/fr0gOzysFIOJcT0QhLxbuyeGirZXQV">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
