--- a/page12.html
+++ b/page12.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DweJ8sr+DzUebH61AUu95zKGU9kG2NQlfp+ahb/Q57Us5noV+WcuYS8zo2ayrSAIHvPL6nyPVAdomMd6fE+D7UmMYTItPnTkbkjXs1Htcq65rPq67r4TATrYAK+ig4UE">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="D1gmSP0bkuAyYN1MhW9fp/3TKXkirrMGFhd7NkykIZ/VzwwIdGMZgWmIW4+o4gvN++ERVq8+R6ORj9tMZiWTanlCRZkKwaiZRTQk3BDvWDqKrVkpmYt5ksoaHHdPIRWB">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
