--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uM+F8mBIpPG3A2kwuMxRf83phvqRdqiLlbby9ei7d/uu7BJgMsmlJvWQ8MnYw8Zz2xBSCxdM9yLqw24GCrv3D5VGYE42eJkrQoBRvIlhtT1K1yUEVZsU2n/CN+BFACrm">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tM4Y446uhryhfKI7g6Ik3V4b3wxmghH4sG5H721rmOls5wIVJawoMBNunbAVJEn8pxvnrhuMAaq6qu92MCjrHU390moGfyuzGwkFFnwzVvJJFK9k9G0Z6D7hJDMmxSN6">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
