create github pages

--- a/page10.html
+++ b/page10.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="O60vT9kBxzJIc5heg56d1kcsGPPgRjPi+XzmsWaAZrswwMNiNV2coDNYfst7NM/xH7FryakQqEyWsLtQiHLXY89r8Uqif4MqeMfOrQp8BpCzI9qtMCs0GLGfAt1ihjrh">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NwsV5VYHhs+iULgvtAjnxKz0Ixqwu6eC37BVuH8ZyWHIRN6deKPn9TTEl8V7OJaD4i/PIY3DLDQIQgLE3jRvD9oWwguHRKs2FTn5bnS8j9iBQfdf1zqGo4fsmZbJworL">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
