--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TAnPC+NleZcLqnK7wN+6P4S9EHfPXhmd8DlZ7bICVC3fxJ8FDrXO/pp2oQEyOHsPKnCFoH189LoCwXwlSCzA0nbyC4DzQeiY4f88TkxhNxkaarUQYjzPczcNyJjdn9de">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3qmCue7xyEQ8MqKGJALEI4zYaJwcB2Ahzt2IaSGF4YzJOG7RiclRMb9DfUGC+WQl/hITYDGXzjeVqURlSLRRDgC0hI8Mt8F7vD3dRmLlbcOliU8xD2XC1q6zMaJbQfNJ">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
@@ -200,7 +200,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/e38ef83bc275a337c82ad3ddf3ec0f4f-220x147.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/-dsc0188-492x328.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         
