--- a/page12.html
+++ b/page12.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="22MFGen/leNU0ty7ct6NnmbefGGlBIa4Nyhtv0jHGdhVMQlCXSRD3c+BwoahIblvxrTzuVNm7JxRXQEQL1klYONrs56x1lOJNBWetBjkl0ihFlLHb+8iVkDZdXMRUpW9">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BvOzShbC/FHfPUIKj+qxkQQzB42mXrBt9mSQy6z7Zrx5sWIGzsfFrHaL8XGgnez7BjeRX8/FzYUW8T9hwnFWeUtmCiTcX7DNbqzg3OYXR1Y+v7ZRkqq9Ok82C2qAtyy/">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
