--- a/page8.html
+++ b/page8.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -394,7 +394,7 @@
                 </div>
             </div>
             <div class="mbr-figure" style="width: 55%;">
-                    <img src="assets/images/e38ef83bc275a337c82ad3ddf3ec0f4f-220x147.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/-dsc0188-690x460.png" alt="Mobirise" title="">
             </div>
         </div>
     </div>
