--- a/page12.html
+++ b/page12.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -110,7 +110,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/e38ef83bc275a337c82ad3ddf3ec0f4f-220x147.jpg" alt="Mobirise" title="">  
+                      <img src="assets/images/-dsc0188-436x291.png" alt="Mobirise" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BvOzShbC/FHfPUIKj+qxkQQzB42mXrBt9mSQy6z7Zrx5sWIGzsfFrHaL8XGgnez7BjeRX8/FzYUW8T9hwnFWeUtmCiTcX7DNbqzg3OYXR1Y+v7ZRkqq9Ok82C2qAtyy/">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fhDEJ003KiMb9PPLVflHfdTAgTxNWC3klcMR1zZ8BwzQZyXl5nJZqmJp0o/uuG47fE/s9JfofnvAp9huB0b/7PWYl+60UHNXEl/j/NPQ6CIYjTQkNlkSAS6z385C00LJ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
