--- a/page12.html
+++ b/page12.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="y/wCufOahwB3ME0y71BUTS9+1LXl7B/LsBdm2FzJLLvTqcDTusQK2LkAOElN+F7HhoubmkxZ+KH5liAKBG/Td6hB3yN3NTgA1SBx9OOBHFJ47lIfAvQ8YMprITNe1TFo">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tUiOkfReQwIG2i8uMTmz75dZYyJ+r5vaZ2Z9KDSp/W7P7VbNUx9BZ53SJt4+kbsJX8Z2gf5dAVX11uDVSJ2TuKJvakgZREBKwR9Q0CsSjBctdWze2pBnSL0gJYtp320o">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
