create github pages

--- a/page11.html
+++ b/page11.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content5 cid-r6QfXBAuze" id="content5-4l">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6QfXBAuze" id="content5-4l">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vGSeoI4Wih9yfbsHm/742Rv5XqzHCsrfNIWziO1k3KxhYBl9GDX7zoxSUSff7RBDH/j0cYaRiaxNKN/ZGsg9IP0l9NUbhDERIStHI5HhELGZVcsB2z664Ne5yHOHCQlp">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SNxi6eOp2oXkLMnGF5phkHICNLl1B+uFOs3SbwRwjxuMlJGtE15/AdLc1atrLi4XveMLPLr+VvG56Q3FlI4D/y0Fehbh7m9dBRFso0BIzJ9kiIBTIcZ3HpsrQ1PjOlT6">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
