--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vFwX19M4ZrwlnENNMI2hMes3wPdUpaSZx5L+kwtVK3oaviqhzRqbzwvInWBWouwTBXn+BesVl+YBJa7ZEudkjXUfAjcO247MBksE5WQ8o1Jv2BULIwwsO4hkR68SKNDN">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="AqniWcqGSEVNW9ZHcIsldY2VvVtqMfEXVKKs04SOh1GJ5Dtg1IU3dyi5JHm6qhha3NitTvOtYFsqXT4wE3W9fBZOTXe2uXjIbAdYjA8Mu99sLZoK8FjIgXIo2Cmu8dCw">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
