create github pages

--- a/page4.html
+++ b/page4.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
 
     
 
@@ -133,7 +133,7 @@
                     </div>
                     <div class="card_back card_cont">
                         
-                        <p class="mbr-text mbr-fonts-style display-7">Commercial Insurance is complicated, and you have big dreams to cover. Barrett Insurance can share your burden by helping you design an insurance program that is right for your business.
+                        <p class="mbr-text mbr-fonts-style display-7">Commercial Insurance is complicated and you have big dreams to cover. Barrett Insurance can share your burden by helping you design an insurance program that is right for your business.
                         </p>
                     </div>
                 </div>
@@ -672,8 +672,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong>Pioneer State Mutual
-<br></strong>Pioneer State Mutual Insurance Company specializes in property and casualty insurance for individuals and businesses. Pioneer sells insurance through the Independent Insurance Agency System and currently write only in
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong>Pioneer State Mutual&nbsp;<br></strong>Pioneer State Mutual Insurance Company specializes in property and casualty insurance for individuals and businesses. Pioneer sells insurance through the Independent Insurance Agency System and currently write only in
 the state of Michigan.&nbsp;<strong><br></strong></p>
                         </div>
                     </div>
