--- a/page10.html
+++ b/page10.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Fj8K/tBvphluKwjxsFP2OjCF6ao9AjmZNUgv4md3ghZ+BSB8vh+LhuH3X6r2vEiVKpnP9EDbx2wpXF2oWrAdYBvFFCMCYffuTkfP2kfdxen/qCRSJDb74jop3qjAW/Zg">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="msanTH90Ab3OxMQ/f2nz08+/VohiliG1yLDs8HSK6/h9gUKy0sDfxxUglh9LligCmh7Rub3bV5olApP7LR04qWjKeoU7OQCiiKyfLI35LoIfy0Lx05tFcax1eSgewaUi">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
