--- a/page15.html
+++ b/page15.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QgbRhhrm" id="content5-4t">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content5 cid-r6QgbRhhrm" id="content5-4t">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uz1JQSdjZsFozCIg3FcaHS9qbXrYzljGRp+PBAGicFk9pstlopagsjuXfPPFzbc6HIw2vFrJLs/KXEq7HRVgw9u6c7apTB/+Fmay3lsnb9+bAYcBqAlDqQQ2JR52SMcX">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uIi5ucFZomGeHj8C2qoSJVl9ogP6ZSzueJcuznLEh6ExiYtkKtFi/sHPa/dJTocbHwneIey7M6sFGGo+a9ITSG0pGHSCmn03EIC9K2HwuvFkE9pGm+PhrLj2P1pC7CKG">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
