--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Mr2sKKwtNZnptMGEwLSad/MmulTY9cCOR0rzBWxIGHHbglE7yzPxG2P/vjA05QzayEuPqQAtFe4zWQhFV+CctYF6y0KlpaAQpMM1yCamlKqqRtZm980NHW7Nb5Nu4x12">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="m9l09A3ww6Q6PzsPpVd4DbLVvUNcMhjCeo5Oz4IkRTkfm7rCN/F8eGA5zeoc26pmZKSdaJWIj8O2FHg9Dq81MP4eIgig3oH7ntvNqXAK4itN/jhBdWAsWg+6EmzDippb">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
